# python-crypto-ott-strategy

./: LICENSE  README.md  pyproject.toml  requirements.txt
traderbot/: __init__.py  datafetcher.py  main.py  strategy.py  utils.py
